Mise en place du menu

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,10 +1,8 @@
- include ../partials/header.pug
+include ../partials/header.pug
+include ./menu.pug
 
 <div class="welcome">
-  <a class="welcome__link" href="./home.html">
-    <img class="welcome__logo" src="img/logo.png">
-    <h1 class="welcome__text">Click</h1>
-  </a>
+
 </div>
 
 
