Emplacement menu et logo en place

--- a/src/pages/menu.pug
+++ b/src/pages/menu.pug
@@ -3,5 +3,6 @@
 <div class="menu">
   <a class="menu__logo" href="./home.html">
     <img class="menu__logo" src="img/logo.png">
+    <img class="menu__logoBlanc" src="img/logoBlanc.svg">
   </a>
 </div>
