--- a/src/scss/blocs/menu.scss
+++ b/src/scss/blocs/menu.scss
@@ -5,9 +5,20 @@
 }
 
 .menu__logo {
-  width: 15%;
+  width: 16%;
+  height: 15%;
   height: auto;
   position: fixed;
-  top: 10px;
-  left: 10px;
+  top: 0px;
+  left: 0px;
+  z-index: 3;
+}
+
+.menu__logoBlanc {
+  width: 15%;
+  height: 44%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
 }
