menu avec options

--- a/src/pages/menu.pug
+++ b/src/pages/menu.pug
@@ -5,4 +5,13 @@
     <img class="menu__logo" src="img/logo.png">
     <img class="menu__logoBlanc" src="img/logoBlanc.svg">
   </a>
+  <div class="menu_options">
+    <a class="menu_optionsText menu__Rea" href="./home.html">Nos Réalisations
+    </a>
+    <a class="menu_optionsText menu__Rea" href="./home.html">Nos Partenaires
+    </a>
+    <a class="menu_optionsText menu__Rea" href="./home.html">Nos Fournisseurs
+    </a>
+    <a class="menu_optionsText menu__Rea" href="./home.html">Contact
+    </a>
 </div>
