--- a/src/scss/blocs/menu.scss
+++ b/src/scss/blocs/menu.scss
@@ -1,7 +1,14 @@
 .menu {
+  display:flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
   height: 100%;
   width: 15%;
   background-color: #4a3277;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 
 .menu__logo {
@@ -21,4 +28,24 @@
   top: 0px;
   left: 0px;
   z-index: 2;
+}
+.menu_options {
+  margin-top:10%;
+  height: 70%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+}
+
+.menu_optionsText {
+  color: #fff;
+  font-size: 1.7rem;
+  padding: 2%;
+}
+
+.menu_optionsText:hover {
+  color: #2eaae1;
+  font-size: 1.7rem;
 }
