--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,10 @@
 body {
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 html {
