Mise en place du fond bleu

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,6 +2,10 @@ include ../partials/header.pug
 include ./menu.pug
 
 <div class="welcome">
+  <img  class="welcome__fond" src="img/FondBleu.svg" href="fondbleu">
+  </img>
+  <img  class="welcome__Trait1" src="img/Trait1.svg" href="Trait1">
+  </img>
 
 </div>
 
