--- a/src/scss/blocs/menu.scss
+++ b/src/scss/blocs/menu.scss
@@ -30,7 +30,7 @@
   z-index: 2;
 }
 .menu_options {
-  margin-top:10%;
+  margin-top:20%;
   height: 70%;
   display:flex;
   flex-direction: column;
@@ -40,9 +40,11 @@
 }
 
 .menu_optionsText {
+  width: 100%;
+  text-align: center;
   color: #fff;
   font-size: 1.7rem;
-  padding: 2%;
+  padding: 3%;
 }
 
 .menu_optionsText:hover {
