--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,7 +3,7 @@
 @import 'reset';
 @import 'blocs/annimation';
 @import 'blocs/menu';
-
+@import 'blocs/welcome';
 
 @font-face {
  font-family: "AlteBold";
@@ -12,6 +12,10 @@
 @font-face {
  font-family: "AlteRegular";
  src: url("../fonts/AlteHaasGroteskRegular.ttf") format("truetype");
+}
+@font-face {
+ font-family: "River";
+ src: url("../fonts/riverave.ttf") format("truetype");
 }
 
 body {
@@ -25,6 +29,7 @@ body {
 
 html {
   height: 100%;
+  font-family: "River";
 }
 
 * {
