--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,10 +2,15 @@ include ../partials/header.pug
 include ./menu.pug
 
 <div class="welcome">
-  <img  class="welcome__fond" src="img/FondBleu.svg" href="fondbleu">
-  </img>
+  <div  class="welcome__fond" >
+  </div>
   <img  class="welcome__Trait1" src="img/Trait1.svg" href="Trait1">
   </img>
+  <img  class="welcome__Trait2" src="img/Trait1.svg" href="Trait2">
+  </img>
+    <div class="welcome__Pein welcome__Text">PEINTURES</div>
+    <h1 class="welcome__Rev welcome__Text">REVETEMENTS</h1>
+    <h1 class="welcome__Cloi welcome__Text">CLOISONS SECHES</h1>
 
 </div>
 
