--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title>SIMAGOT</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
     <header>
+       <a class="menu__logo" href="./home.html">
+    <img class="menu__logo" src="img/logo.png">
 
     </header>
