--- a/src/scss/blocs/welcome.scss
+++ b/src/scss/blocs/welcome.scss
@@ -1,18 +1,87 @@
 .welcome {
   height: 100%;
   width: 100%;
-}
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+
 
 .welcome__fond {
-  height: 100%;
+
+  height:100%;
+  width: 100%;
   position: fixed;
   top: 0px;
   right: 0px;
+  background-image: url(../img/FondBleuP.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+    @media all and (min-width: 600px) {
+      height:100%;
+      width: 60%;
+      background-image: url(../img/FondBleu.svg);
+    }
+}
+
 }
 
 .welcome__Trait1 {
-  height:90%;
+  height:90vh;
   position: fixed;
   bottom: 0px;
-  right: 22%;
+  right: 2vw;
+
+  @media all and (min-width: 600px) {
+    right: 22vw;
+  }
+}
+
+.welcome__Trait2 {
+  height:70vh;
+  position: fixed;
+  bottom: 0px;
+  right: 1vw;
+
+ @media all and (min-width: 600px) {
+    right: 24vw;
+  }
+}
+
+
+.welcome__Text {
+   color: #fff;
+  font-size: 3.5rem;
+  font-family: "AlteBold";
+  transform: rotate(-57deg);
+  display:flex;
+  position:fixed;
+    @media all and (min-width: 600px) {
+     transform: rotate(-55deg);
+     font-size: 3.5rem;
+    }
+}
+.welcome__Pein {
+  bottom: 43%;
+  right:32%;
+}
+
+.welcome__Rev {
+  bottom: 67%;
+  right: 16%;
+}
+
+.welcome__Cloi {
+  bottom: 32%;
+  right: 20%;
+}
+
+@media all and (min-width: 600px) {
+
+  .welcome {
+    height: 100%;
+    width: 70%;
+  }
+
 }
