--- a/src/partials/header.pug
+++ b/src/partials/header.pug
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-       <a class="menu__logo" href="./home.html">
+       <a class="menu__logo" href="#menu">
     <img class="menu__logo" src="img/logo.png">
 
     </header>
