--- a/src/pages/menu.pug
+++ b/src/pages/menu.pug
@@ -3,14 +3,14 @@
  <img class="menu__logoBlanc" src="img/logoBlanc.svg">
 
   </a>
-  <div class="menu_options">
+  <div class="menu_options" id="menu">
     <a class="menu_optionsText menu__Rea" href="./home.html">Nos Réalisations
     </a>
-    <a class="menu_optionsText menu__Rea" href="./home.html">Nos Partenaires
+    <a class="menu_optionsText menu__Rea" href="./part.html">Nos Partenaires
     </a>
-    <a class="menu_optionsText menu__Rea" href="./home.html">Nos Fournisseurs
+    <a class="menu_optionsText menu__Rea" href="./fourn.html">Nos Fournisseurs
     </a>
-    <a class="menu_optionsText menu__Rea" href="./home.html">Contact
+    <a class="menu_optionsText menu__Contact" href="./contact.html">Contact
     </a>
     </div>
 </div>
