--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,7 @@
 @import 'blocs/annimation';
 @import 'blocs/menu';
 @import 'blocs/welcome';
+@import 'blocs/histoire';
 
 @font-face {
  font-family: "AlteBold";
@@ -21,6 +22,7 @@
 body {
   height: 100%;
   width: 100%;
+  position: relative;
   display: flex;
   justify-content: center;
   align-content: center;
