--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ table {
   left: 0px;
   z-index: 10; }
 
-.menu__logo {
+.logo {
   width: 44%;
   height: 15%;
   height: auto;
@@ -109,7 +109,7 @@ table {
   padding: 3%; }
 
 .menu_optionsText:hover {
-  color: #2eaae1;
+  color: #00adef;
   font-size: 1.7rem; }
 
 .welcome {
@@ -204,14 +204,28 @@ table {
     width: 70%; } }
 
 .histoire {
-  background-color: #2eaae1;
+  background-color:#00adef;
   width: 100%;
   height: 60vh;
   position: fixed;
   left: 0px;
   top: 100vh;
   z-index: 40; }
+.facebook {
+    background-color:#00adef;
+    width: 100%;
+    height: 100vh;
+}
+/**Page partennaires **/
+.partennaires {
+  height: 0px;
+  width: 0px;
+  border-right:#00adef solid 500px;
+  border-left: transparent solid 500px;
+  border-bottom:#00adef solid 100vw;
+  border-top: transparent solid 500px;
 
+}
 @font-face {
   font-family: "AlteBold";
   src: url("../fonts/AlteHaasGroteskBold.ttf") format("truetype"); }
@@ -240,4 +254,3 @@ html {
 * {
   box-sizing: border-box; }
 
-/*# sourceMappingURL=styles.css.map */
